add likes for posts, update docs, add test
