# src/features/posts/api/mappers/mapToPostViewModel.ts
@@ -1,8 +1,7 @@
-import { WithId } from 'mongodb';
 import { PostViewModel } from '../models';
-import { type TPost } from '../../domain';
+import { PostReadModel } from '../../repository/models';
 
-export const mapToPostViewModel = (post: WithId<TPost>): PostViewModel => ({
+export const mapToPostViewModel = (post: PostReadModel): PostViewModel => ({
     id: post._id.toString(),
     title: post.title,
     shortDescription: post.shortDescription,
@@ -10,4 +9,14 @@ export const mapToPostViewModel = (post: WithId<TPost>): PostViewModel => ({
     blogId: post.blogId,
     blogName: post.blogName,
     createdAt: post.createdAt,
+    extendedLikesInfo: {
+        myStatus: post.myStatus,
+        likesCount: post.likesInfo.likesCount,
+        dislikesCount: post.likesInfo.dislikesCount,
+        newestLikes: post.newestLikes.map(like => ({
+            addedAt: like.createdAt,
+            userId: like.authorId,
+            login: like.authorLogin,
+        })),
+    },
 });
